# UBB

Computer Systems Architecture/Exam practice/problema_14feb_2022/: main.asm
Computer Systems Architecture/Exam practice/problema_27_ian/: main.asm
Computer Systems Architecture/Exam practice/problema_30_ian/: main.asm
Computer Systems Architecture/Exam practice/problema_8_feb_2018/: a.asm  b.asm
Computer Systems Architecture/Exam practice/problema_9_feb_2018/: main.asm
Computer Systems Architecture/Labs/Lab 11/: module1.asm  module2.asm
Computer Systems Architecture/Labs/Lab 2/: p1.asm  p2.asm  p3.asm  p4.asm  p5.asm  p6.asm  p6.txt  p7.asm  p8.asm  p9.asm
Computer Systems Architecture/Labs/Lab 3/: lab3_p1.asm  lab3_p2.asm  lab3_p3.asm  lab3_p4.asm  p2.asm
Computer Systems Architecture/Labs/Lab 4/: lab4_p1.asm  lab4_p2.asm  p1.asm  p2.asm
Computer Systems Architecture/Labs/Lab 5/: lab5_p1.asm  prob_fisiere.asm
Computer Systems Architecture/Labs/Lab 6/: lab6_ex.asm  lab6_p1.asm
Computer Systems Architecture/Labs/Lab 8/: input.txt  lab8.asm  lab8_p1.asm  lab8_p2_with_files.asm  new 1.asm
Computer Systems Architecture/Practicals/: ex.asm  input.txt  numere.txt  output2.txt  practic.asm  practic2.asm  prob1.asm  prob10.asm  prob11.asm  prob2.asm  prob3-1.asm  prob3.asm  prob4.asm  prob5.asm  prob5.lst  prob6.asm  prob8-1.asm  prob8.asm  prob9.asm
Computer Systems Architecture/c+asm/: main.asm  main.c  module.asm
Data Structures & Algorithms/Bag/: Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  ExtendedTest.cpp
Data Structures & Algorithms/FixedCapBiMap/: ExtendedTest.cpp  FixedCapBiMap.cpp  FixedCapBiMap.h
Data Structures & Algorithms/IndexedList/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  IndexedList.cpp  IndexedList.h  ListIterator.cpp  ListIterator.h
Data Structures & Algorithms/Set/: CMakeLists.txt  ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h
Data Structures & Algorithms/SortedBag/: App.cpp  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Data Structures & Algorithms/SortedSet/: ExtendedTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
Graph Algorithms/Directed Graph/: Documentation-Lab1-Bortos-Alexia-Ioana.docx  bfs.py  directed_graph.py  main.py  random_graph1.txt  service.py  ui.py
Object Oriented Programming/Assignements/A1/: problem3.c
Object Oriented Programming/Assignements/A10/: appGUI.h  repository.h  trenchCoatValidator.cpp  trenchCoatsTableModel.cpp  trenchCoatsTableModel.h  undoRedoCommands.h  userGUI.h
Object Oriented Programming/Assignements/A6-7/: trenchCoats.csv
Object Oriented Programming/Assignements/A8-9/: CMakeLists.txt  appGUI.h  exceptions.cpp  service.cpp  service.h  shoppingBasket.h  trenchCoatValidator.h  ui.cpp  ui.h
Object Oriented Programming/Assignments/A10/: CMakeLists.txt  adminGUI.cpp  adminGUI.h  appGUI.cpp  domain.cpp  main.cpp  tests.cpp  undoRedoCommands.cpp  userGUI.cpp
Object Oriented Programming/Assignments/A6-7/: ProperTrenchCoatsUML.mdj
Object Oriented Programming/Assignments/A8-9/: adminGUI.cpp  adminGUI.h  appGUI.cpp  main.cpp  repository.cpp  shoppingBasket.cpp  userGUI.cpp  userGUI.h
Object Oriented Programming/Bacteria/: biologist.h  gui.cpp  gui.h  gui.ui  repository.cpp
Object Oriented Programming/BillsManager/: billsListModel.cpp  billsListModel.h  billsgui.ui  domain.cpp  main.cpp  service.h
Object Oriented Programming/Equations/: CMakeLists.txt  gui.cpp  gui.ui  repo.cpp  repo.h
Object Oriented Programming/PacientsManager/: controller.cpp  main.cpp  pacient.h  statisticswindow.h
Object Oriented Programming/RealEstate/: client.cpp  client.h  dwelling.cpp  dwelling.h  main.cpp  realEstateAgency.h  ui.h
Object Oriented Programming/ShoppingList/: main.cpp  shoppingList.cpp  shoppinggui.cpp  shoppinggui.h  ui_shoppinggui.h
Object Oriented Programming/TaskManager/: CMakeLists.txt  repository.h  tasksgui.cpp
Object Oriented Programming/Test Prep/Bacteria/: CMakeLists.txt  bacteria.h  main.cpp  repository.h  tablemodel.cpp  tablemodel.h
Object Oriented Programming/Test Prep/BillsManager/: CMakeLists.txt  billsListFilterProxyModel.cpp  billsListFilterProxyModel.h  billsgui.cpp  billsgui.h  domain.h  repository.cpp  repository.h  service.cpp  ui_billsgui.h
Object Oriented Programming/Test Prep/PacientsManager/: CMakeLists.txt  controller.h  doctor.h  observer.h  repository.h  statisticswindow.cpp  statisticswindow.ui  ui_window.h  window.cpp  window.h  window.ui
Object Oriented Programming/Test Prep/ShoppingList/: CMakeLists.txt  repository.cpp  repository.h  shoppingList.h  shoppinggui.ui
Object Oriented Programming/Test Prep/Vegetables/: CMakeLists.txt  main.cpp  repository.cpp  repository.h  ui_vegetablesGUI.h  vegetablesGUI.cpp  veggie.cpp
Object Oriented Programming/Test Prep/Volunteering/: CMakeLists.txt  department.h  depwindow.cpp  depwindow.ui  observer.h  repository.h  ui_depwindow.h  window.ui
Object Oriented Programming/Vegetables/: vegetablesGUI.h  vegetablesGUI.ui  veggie.h
Object Oriented Programming/Volunteering/: controller.cpp  controller.h  depwindow.h  main.cpp  repository.cpp  volunteer.h  window.cpp  window.h
Operating Systems/C Test Practice/: a.c  hello-remember.c  hello-remember2.c  hello.sh  lab2.c  matrix-from-binary.c  matrix-from-text.c  matrix-to-binary.c
Operating Systems/Exam/: READ-WRITE-FUNCTIONS-C.txt  exam22june2023.txt  lab3-sol.txt  lab4-sol.txt  regular-expressions.txt  rezolvare-11jun.txt  rezolvare-19jun.txt  rezolvare-22jun.txt  theory.txt
Operating Systems/Processes/: a.c  p1.c  p12.c  p2.c  p21.c  p22.c  p2rec.c  p3.c  p4.c
Operating Systems/Shell Programming/: 1.awk  1.sh  2.awk  commands-shell.txt  ex1.txt  ex2.txt  exam-1.sh  exam-2.sh  exam-3.sh  exam-4.sh  exam-5.sh  exam-6.sh  input1.txt  p1.sh  p10.sh  p11.sh  p12.sh  p13.sh  p14.sh  p15.sh  p16.sh  p17.sh  p18.sh  p2.sh  p3.sh  p4.sh  p5.sh  p6.sh  p7.sh  p8.sh  p9.sh
Operating Systems/Threads/: a.c  ex.c  ex2.c  p.c  p1.c  p2.c  p3.c  p4.c  p5.c
(+88 files in other folders)
